--- a/articles/container-service/TOC.yml
+++ b/articles/container-service/TOC.yml
@@ -6,3 +6,5 @@
   items:
     - name: Azure-översikt
       href: 'https://azure.microsoft.com/roadmap/?category=containers'
+    - name: Priskalkylator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
