--- a/articles/container-service/dcos-swarm/index.yml
+++ b/articles/container-service/dcos-swarm/index.yml
@@ -26,7 +26,7 @@ sections:
         items:
           - image:
               src: 'https://docs.microsoft.com/media/logos/logo_linux.svg'
-            text: Linux
+            text: Skapa ett DC/OS-kluster
             href: /azure/container-service/container-service-dcos-quickstart
   - title: Steg för steg-självstudier
     items:
