--- a/articles/app-service-web/toc.yml
+++ b/articles/app-service-web/toc.yml
@@ -166,6 +166,12 @@
           href: app-service-web-test-in-production-get-start.md
         - name: Lägg till funktioner till en webbapp
           href: app-service-web-get-started-2.md
+        - name: Distribuera en Spring Boot-app till Azure Web Apps med Maven-pluginprogrammet
+          href: app-service-web-deploy-spring-boot-app-with-maven-plugin.md
+        - name: Distribuera en behållarbaserad Spring Boot-app med Maven-pluginprogrammet
+          href: app-service-web-deploy-containerized-spring-boot-app-with-maven-plugin.md
+        - name: Distribuera en Spring Boot-app i Azure Container Registry till Azure App Service
+          href: app-service-web-deploy-spring-boot-app-from-container-registry-using-maven-plugin.md
     - name: Ansluta till DB/resurser
       items:
         - name: Ansluta till lokala data
