--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -59,8 +59,6 @@
       href: azure-vm-network-overview.md
     - name: Skalningsuppsättning för virtuella datorer
       href: ../../virtual-machine-scale-sets/virtual-machine-scale-sets-overview.md
-    - name: Instans av metadatatjänst
-      href: ../virtual-machines-instancemetadataservice-overview.md
     - name: Behållare
       href: containers.md
     - name: Resource Manager
@@ -167,6 +165,10 @@
               href: agent-user-guide.md
             - name: Agentuppdatering
               href: update-agent.md
+        - name: Schemalagda händelser
+          href: scheduled-events.md
+        - name: Övervaka metadata
+          href: instance-metadata-service.md
     - name: Använda avbildningar
       items:
         - name: Hitta och använda avbildningar
