--- a/articles/container-instances/index.yml
+++ b/articles/container-instances/index.yml
@@ -24,7 +24,7 @@ sections:
         style: icon48
         items:
           - image:
-              src: /azure/container-instances/media/container-instances.png
+              src: /azure/container-instances/media/container-instances.svg
             text: Skapa en behållarinstans
             href: /azure/container-instances/container-instances-quickstart
   - title: Steg för steg-självstudier
