--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -41,6 +41,14 @@
       href: tutorial-jenkins-github-docker-cicd.md
     - name: 13 – CI/CD med Team Services
       href: tutorial-build-deploy-jenkins.md
+    - name: 14a – Skapa LAMP-stack
+      href: tutorial-lamp-stack.md
+    - name: 14a – Skapa LEMP-stack
+      href: tutorial-lemp-stack.md
+    - name: 14a – Skapa MEAN-stack
+      href: tutorial-mean-stack.md
+    - name: 15 – Säker webbserver med SSL
+      href: tutorial-secure-web-server.md
 - name: Exempel
   items:
     - name: Azure CLI
@@ -261,6 +269,10 @@
               href: n-series-driver-setup.md
     - name: Hantera lagring
       items:
+        - name: Mer information om Managed Disks
+          href: managed-disks-overview.md
+        - name: Vanliga frågor och svar om diskar
+          href: faq-for-disks.md
         - name: Lägg till en disk
           items:
             - name: Azure CLI
@@ -273,16 +285,18 @@
           href: expand-disks.md
         - name: Ögonblicksbild av en disk
           href: snapshot-copy-managed-disk.md
+        - name: Säkerhetskopiera ohanterade diskar
+          href: incremental-snapshots.md
         - name: Konvertera till Managed Disks
           href: convert-unmanaged-to-managed-disks.md
-        - name: Vanliga frågor och svar om diskar
-          href: ../../storage/storage-faq-for-disks.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
         - name: Konvertera en disk mellan Standard och Premium
           href: convert-disk-storage.md
         - name: Kopiera filer till en virtuell dator
           href: copy-files-to-linux-vm-using-scp.md
         - name: Använda fillagring
           href: mount-azure-file-storage-on-linux-using-smb.md
+        - name: Distribuera diskar med mall
+          href: using-managed-disks-template-deployments.md
         - name: Optimera prestanda
           href: optimization.md
           items:
