--- a/bread/toc.yml
+++ b/bread/toc.yml
@@ -298,6 +298,16 @@
     - name: Lagring
       tocHref: /azure/storage/
       topicHref: /azure/storage/
+      items:
+        - name: Blobar
+          tocHref: /azure/storage/blobs/
+          topicHref: /azure/storage/blobs/storage-blobs-introduction
+        - name: Filer
+          tocHref: /azure/storage/files/
+          topicHref: /azure/storage/files/storage-files-introduction
+        - name: Köer
+          tocHref: /azure/storage/queues/
+          topicHref: /azure/storage/queues/storage-queues-introduction
     - name: StorSimple
       tocHref: /azure/storsimple/
       topicHref: /azure/storsimple/
