--- a/articles/container-instances/TOC.yml
+++ b/articles/container-instances/TOC.yml
@@ -43,6 +43,8 @@
   items:
     - name: Azure-översikt
       href: 'https://azure.microsoft.com/roadmap/'
+    - name: Mallar – Container Instances
+      href: 'https://azure.microsoft.com/resources/templates/?resourceType=Microsoft.Containerinstance'
     - name: Priskalkylator
       href: 'https://azure.microsoft.com/pricing/calculator/'
     - name: Regional tillgänglighet
