--- a/articles/container-service/dcos-swarm/TOC.yml
+++ b/articles/container-service/dcos-swarm/TOC.yml
@@ -59,7 +59,7 @@
               href: container-service-monitoring-dynatrace.md
     - name: Docker Swarm
       items:
-        - name: Swarm-läge – snabbstart
+        - name: Snabbstart för Docker CE
           href: container-service-swarm-mode-walkthrough.md
         - name: Docker och Docker Compose
           href: container-service-docker-swarm.md
