--- a/articles/container-service/dcos-swarm/index.yml
+++ b/articles/container-service/dcos-swarm/index.yml
@@ -28,6 +28,10 @@ sections:
               src: 'https://docs.microsoft.com/media/logos/logo_linux.svg'
             text: Skapa ett DC/OS-kluster
             href: /azure/container-service/container-service-dcos-quickstart
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_docker.svg'
+            text: Skapa ett Docker Swarm-kluster
+            href: /azure/container-service/dcos-swarm/container-service-swarm-walkthrough
   - title: Steg för steg-självstudier
     items:
       - type: paragraph
