--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -218,8 +218,32 @@
               href: gremlin-support.md
         - name: Tabell-API
           items:
-            - name: Table Storage
-              href: 'https://docs.microsoft.com/rest/api/storageservices/fileservices/Table-Service-Concepts'
+            - name: Översikt över tabellagring
+              href: table-storage-overview.md
+            - name: Designguide för tabellagring
+              href: table-storage-design-guide.md
+            - name: 'REST-API:er för tabellagring'
+              href: /rest/api/storageservices/Table-Service-Concepts
+            - name: Självstudier
+              items:
+                - name: .NET
+                  href: table-storage-how-to-use-dotnet.md
+                - name: 'F#'
+                  href: /dotnet/articles/fsharp/using-fsharp-on-azure/table-storage
+                - name: Node.js
+                  href: table-storage-cloud-service-nodejs.md
+                - name: Java
+                  href: table-storage-how-to-use-java.md
+                - name: Node.js
+                  href: table-storage-how-to-use-nodejs.md
+                - name: C++
+                  href: table-storage-how-to-use-c-plus.md
+                - name: PHP
+                  href: table-storage-how-to-use-php.md
+                - name: Python
+                  href: table-storage-how-to-use-python.md
+                - name: Ruby
+                  href: table-storage-how-to-use-ruby.md
         - name: Ändringsfeed
           href: change-feed.md
         - name: Geospatial
