--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -29,6 +29,8 @@
           href: connect-cpp.md
         - name: Go
           href: connect-go.md
+        - name: MySQL Workbench
+          href: connect-workbench.md
 - name: Självstudier
   items:
     - name: 1 – Utforma en databas
