--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -416,7 +416,7 @@
       href: 'https://azure.microsoft.com/documentation/videos/index/?services=sql-database'
     - name: Tjänstuppdateringar
       href: 'https://azure.microsoft.com/updates/?service=sql-database'
-    - name: Vägledning för arkitektur
-      href: /azure/architecture/guide/
+    - name: Arkitekturcenter
+      href: /azure/architecture/
     - name: Kundberättelser
       href: 'https://customers.microsoft.com/en-us/search?sq=%22Azure%20SQL%20Database%22&ff=&p=0&so=story_publish_date%20desc'
