--- a/articles/virtual-machines/windows/index.yml
+++ b/articles/virtual-machines/windows/index.yml
@@ -4,7 +4,7 @@ title: Dokumentation om virtuella Windows-datorer
 metadata:
   document_id: 1d98d530-28c7-635f-d41b-8da3ae02970c
   title: 'Dokumentation om virtuella Windows-datorer i Azure – självstudier, API-referens'
-  meta.description: Learn how to create Windows virtual machines. Documentation helps you plan, deploy, and manage a virtual machine computing environment in the cloud.
+  meta.description: 'Learn how to create Windows virtual machines. Documentation helps you plan, deploy, and manage a virtual machine computing environment in the cloud.'
   services: virtual-machines\windows
   author: czeumault
   manager: carolz
@@ -18,89 +18,90 @@ abstract:
   description: 'Virtuella Windows-datorer i Azure tillhandahåller en säker, virtualiserad infrastruktur på begäran och med hög skalbarhet med hjälp av Windows Server. Lär dig hur du skapar, konfigurerar, hanterar och skalar virtuella Windows-datorer med våra snabbstarter, självstudier och exempel.'
   aside:
     image:
-      alt: 
+      alt: null
       height: 110
-      src: https://docs.microsoft.com/en-us/azure/virtual-machines/windows/media/index/create-windows-server-virtual-machine.png
-      width: 250  
+      src: 'https://docs.microsoft.com/en-us/azure/virtual-machines/windows/media/index/create-windows-server-virtual-machine.png'
+      width: 250
     title: 'Skapa en virtuell Windows Server-dator. (3:58)'
-    href: https://azure.microsoft.com/en-us/resources/videos/create-windows-server-virtual-machine/
+    href: 'https://azure.microsoft.com/en-us/resources/videos/create-windows-server-virtual-machine/'
     width: 250
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: 'Lär dig hur du distribuerar en IIS-webbserver i en virtuell dator som kör Windows Server 2016:'
-  - type: list
-    style: icon48
-    items: 
-    - image: 
-        src: https://docs.microsoft.com/en-us/azure/virtual-machines/windows/media/index/portal.svg
-      text: Azure Portal
-      href: https://docs.microsoft.com/en-us/azure/virtual-machines/virtual-machines-windows-quick-create-portal?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json
-    - image: 
-        src: https://docs.microsoft.com/en-us/azure/virtual-machines/windows/media/index/logo_powershell.svg
-      text: Azure PowerShell
-      href: https://docs.microsoft.com/en-us/azure/virtual-machines/virtual-machines-windows-quick-create-powershell?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json
-    - image: 
-        src: https://docs.microsoft.com/en-us/azure/virtual-machines/windows/media/index/cli.svg
-      text: Azure CLI
-      href: https://docs.microsoft.com/en-us/azure/virtual-machines/virtual-machines-windows-quick-create-cli?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: 'Lär dig att distribuera, hantera och övervaka virtuella Windows-datorer på Azure'
-  - type: list
-    style: ordered
+  - title: Snabbstarter på 5 minuter
     items:
-    - html: <a href="/azure/virtual-machines/windows/tutorial-manage-vm">Skapa och hantera virtuella Windows-datorer</a>
-    - html: <a href="/azure/virtual-machines/windows/tutorial-manage-data-disk">Skapa och hantera virtuella datordiskar</a>
-    - html: <a href="/azure/virtual-machines/windows/tutorial-automate-vm-deployment">Automatisera konfiguration av virtuella datorer</a>
-    - html: <a href="/azure/virtual-machines/windows/tutorial-custom-images">Skapa anpassade avbildningar av en virtuell dator</a>
-    - html: <a href="/azure/virtual-machines/windows/tutorial-availability-sets">Skapa virtuella datorer med hög tillgänglighet</a>
-    - html: <a href="/azure/virtual-machines/windows/tutorial-create-vmss">Skapa en VM-skalningsuppsättning</a>
-    - html: <a href="/azure/virtual-machines/windows/tutorial-load-balancer">Belastningsutjämna virtuella datorer</a>
-    - html: <a href="/azure/virtual-machines/windows/tutorial-virtual-network">Hantera virtuella datorer med virtuella nätverk</a>
-    - html: <a href="/azure/virtual-machines/windows/tutorial-backup-vms">Säkerhetskopiera virtuella datorer</a>
-    - html: <a href="/azure/virtual-machines/windows/tutorial-monitoring">Övervaka virtuella datorer</a>
-    - html: <a href="/azure/virtual-machines/windows/tutorial-azure-security">Hantera säkerhet på virtuella datorer</a>
-    - html: <a href="/azure/virtual-machines/windows/tutorial-vsts-iis-cicd">Skapa en pipeline för kontinuerlig integrering med Visual Studio</a>
-- title: Kostnadsfri videoutbildning för PluralSight
-  items:
-  - type: list
-    style: cards
-    className: cardsW
+      - type: paragraph
+        text: 'Lär dig hur du distribuerar en IIS-webbserver i en virtuell dator som kör Windows Server 2016:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/en-us/azure/virtual-machines/windows/media/index/portal.svg'
+            text: Azure Portal
+            href: 'https://docs.microsoft.com/en-us/azure/virtual-machines/virtual-machines-windows-quick-create-portal?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json'
+          - image:
+              src: 'https://docs.microsoft.com/en-us/azure/virtual-machines/windows/media/index/logo_powershell.svg'
+            text: Azure PowerShell
+            href: 'https://docs.microsoft.com/en-us/azure/virtual-machines/virtual-machines-windows-quick-create-powershell?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json'
+          - image:
+              src: 'https://docs.microsoft.com/en-us/azure/virtual-machines/windows/media/index/cli.svg'
+            text: Azure CLI
+            href: 'https://docs.microsoft.com/en-us/azure/virtual-machines/virtual-machines-windows-quick-create-cli?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json'
+  - title: Steg för steg-självstudier
     items:
-    - html: '<p><a href="https://www.pluralsight.com/courses/managing-infrastructure-microsoft-azure-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02">Hantera infrastruktur</a></p>'
-      image: 
-        src: https://docs.microsoft.com/en-us/azure/virtual-machines/windows/media/index/video-training-infrastructure.png
-        href: https://www.pluralsight.com/courses/managing-infrastructure-microsoft-azure-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02
-    - html: '<p><a href="https://www.pluralsight.com/courses/azure-vms-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02">Komma igång med Virtual Machines</a></p>'
-      image: 
-        src: https://docs.microsoft.com/en-us/azure/virtual-machines/windows/media/index/video-training-vms.png
-        href: https://www.pluralsight.com/courses/azure-vms-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02
-    - html: '<p><a href="https://www.pluralsight.com/courses/azure-iaas-monitoring-management-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02">Komma igång med IaaS-övervakning</a></p>'
-      image: 
-        src: https://docs.microsoft.com/en-us/azure/virtual-machines/windows/media/index/video-training-iaas-monitoring.png
-        href: https://www.pluralsight.com/courses/azure-iaas-monitoring-management-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02
-- title: Exempel
-  items:
-  - type: paragraph
-    text: Distribuera din första app till Azure.
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: paragraph
+        text: 'Lär dig att distribuera, hantera och övervaka virtuella Windows-datorer på Azure'
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/virtual-machines/windows/tutorial-manage-vm">Skapa och hantera virtuella Windows-datorer</a>
+          - html: <a href="/azure/virtual-machines/windows/tutorial-manage-data-disk">Skapa och hantera virtuella datordiskar</a>
+          - html: <a href="/azure/virtual-machines/windows/tutorial-automate-vm-deployment">Automatisera konfiguration av virtuella datorer</a>
+          - html: <a href="/azure/virtual-machines/windows/tutorial-custom-images">Skapa anpassade avbildningar av en virtuell dator</a>
+          - html: <a href="/azure/virtual-machines/windows/tutorial-availability-sets">Skapa virtuella datorer med hög tillgänglighet</a>
+          - html: <a href="/azure/virtual-machines/windows/tutorial-create-vmss">Skapa en VM-skalningsuppsättning</a>
+          - html: <a href="/azure/virtual-machines/windows/tutorial-load-balancer">Belastningsutjämna virtuella datorer</a>
+          - html: <a href="/azure/virtual-machines/windows/tutorial-virtual-network">Hantera virtuella datorer med virtuella nätverk</a>
+          - html: <a href="/azure/virtual-machines/windows/tutorial-backup-vms">Säkerhetskopiera virtuella datorer</a>
+          - html: <a href="/azure/virtual-machines/windows/tutorial-monitoring">Övervaka virtuella datorer</a>
+          - html: <a href="/azure/virtual-machines/windows/tutorial-azure-security">Hantera säkerhet på virtuella datorer</a>
+          - html: <a href="/azure/virtual-machines/windows/tutorial-vsts-iis-cicd">Skapa en pipeline för kontinuerlig integrering med Visual Studio</a>
+          - html: <a href="/azure/virtual-machines/windows/tutorial-secure-web-server">Skydda en webbserver med SSL</a>
+  - title: Kostnadsfri videoutbildning för PluralSight
     items:
-    - html: <a href="/azure/virtual-machines/virtual-machines-windows-cli-samples?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json">Azure CLI</a>
-    - html: <a href="/azure/virtual-machines/virtual-machines-windows-powershell-samples?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json">Azure PowerShell</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: list
+        style: cards
+        className: cardsW
+        items:
+          - html: '<p><a href="https://www.pluralsight.com/courses/managing-infrastructure-microsoft-azure-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02">Hantera infrastruktur</a></p>'
+            image:
+              src: 'https://docs.microsoft.com/en-us/azure/virtual-machines/windows/media/index/video-training-infrastructure.png'
+              href: 'https://www.pluralsight.com/courses/managing-infrastructure-microsoft-azure-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02'
+          - html: '<p><a href="https://www.pluralsight.com/courses/azure-vms-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02">Komma igång med Virtual Machines</a></p>'
+            image:
+              src: 'https://docs.microsoft.com/en-us/azure/virtual-machines/windows/media/index/video-training-vms.png'
+              href: 'https://www.pluralsight.com/courses/azure-vms-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02'
+          - html: '<p><a href="https://www.pluralsight.com/courses/azure-iaas-monitoring-management-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02">Komma igång med IaaS-övervakning</a></p>'
+            image:
+              src: 'https://docs.microsoft.com/en-us/azure/virtual-machines/windows/media/index/video-training-iaas-monitoring.png'
+              href: 'https://www.pluralsight.com/courses/azure-iaas-monitoring-management-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02'
+  - title: Exempel
     items:
-    - title: Kommandorad
-      html: <p><a href="/powershell/azureps-cmdlets-docs">Azure PowerShell</a></p><p><a href="/cli/azure/vm">Azure CLI</a></p>
-    - title: Språk
-      html: '<p><a href="/dotnet/api/microsoft.azure.management.compute">.NET</a></p><p><a href="/java/api">Java</a></p><p><a href="https://azure.microsoft.com/develop/nodejs/#azure-sdk">Node.js</a></p><p><a href="https://azure.microsoft.com/develop/python/">Python</a></p>'
-    - title: REST
-      html: <p><a href="/rest/api/compute">Compute REST API-referens</a></p>
+      - type: paragraph
+        text: Distribuera din första app till Azure.
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="/azure/virtual-machines/virtual-machines-windows-cli-samples?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json">Azure CLI</a>
+          - html: <a href="/azure/virtual-machines/virtual-machines-windows-powershell-samples?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json">Azure PowerShell</a>
+  - title: Referens
+    items:
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: <p><a href="/powershell/azureps-cmdlets-docs">Azure PowerShell</a></p><p><a href="/cli/azure/vm">Azure CLI</a></p>
+          - title: Språk
+            html: '<p><a href="/dotnet/api/microsoft.azure.management.compute">.NET</a></p><p><a href="/java/api">Java</a></p><p><a href="https://azure.microsoft.com/develop/nodejs/#azure-sdk">Node.js</a></p><p><a href="https://azure.microsoft.com/develop/python/">Python</a></p>'
+          - title: REST
+            html: <p><a href="/rest/api/compute">Compute REST API-referens</a></p>
