--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -39,6 +39,8 @@
       href: tutorial-azure-security.md
     - name: 12 – Team Services CI/CD
       href: tutorial-vsts-iis-cicd.md
+    - name: 13 – Säker webbserver med SSL
+      href: tutorial-secure-web-server.md
 - name: Exempel
   items:
     - name: PowerShell
@@ -50,7 +52,7 @@
     - name: Regioner och tillgänglighet
       href: regions-and-availability.md
     - name: Lagring
-      href: ../../storage/storage-about-disks-and-vhds-windows.md?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json
+      href: about-disks-and-vhds.md
     - name: Nätverk
       href: network-overview.md
     - name: Skalningsuppsättning för virtuella datorer
@@ -106,6 +108,10 @@
           href: csharp.md
         - name: 'Använda en mall med C#'
           href: csharp-template.md
+        - name: Skapa en virtuell dator med Chef
+          href: chef-automation.md
+        - name: Använda Java
+          href: java.md
         - name: Använda Python
           href: python.md
         - name: Använda en mall
@@ -205,6 +211,10 @@
               href: excel-cluster-hpcpack.md
     - name: Hantera lagring
       items:
+        - name: Mer information om Managed Disks
+          href: managed-disks-overview.md
+        - name: Vanliga frågor och svar om diskar
+          href: faq-for-disks.md
         - name: Lägg till en disk
           items:
             - name: Azure PowerShell
@@ -217,12 +227,14 @@
           href: expand-os-disk.md
         - name: Ögonblicksbild av en disk
           href: snapshot-copy-managed-disk.md
+        - name: Säkerhetskopiera ohanterade diskar
+          href: incremental-snapshots.md
         - name: Konvertera en disk mellan Standard och Premium
           href: convert-disk-storage.md
-        - name: Vanliga frågor och svar om diskar
-          href: ../../storage/storage-faq-for-disks.md?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json
         - name: Använda fillagring
           href: mount-azure-file-storage.md
+        - name: Distribuera diskar med mall
+          href: using-managed-disks-template-deployments.md
         - name: Migrera till Managed Disks
           href: migrate-to-managed-disks.md
           items:
