--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -20,6 +20,10 @@
       href: security-authentication.md
     - name: Leverans och nytt försök
       href: delivery-and-retry.md
+- name: Instruktionsguider
+  items:
+    - name: Dirigera Blob Storage-händelser
+      href: ../storage/blobs/storage-blob-event-quickstart.md?toc=%2fazure%2fevent-grid%2ftoc.json
 - name: Referens
   items:
     - name: REST
