--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -38,6 +38,8 @@
           href: storage-blob-storage-tiers.md
         - name: Utforma HA-appar med RA-GRS
           href: ../common/storage-designing-ha-apps-with-ragrs.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+        - name: Reagerar på händelser
+          href: storage-blob-event-overview.md
         - name: Mål för skalbarhet och prestanda
           href: ../common/storage-scalability-targets.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Checklista för prestanda och skalbarhet
@@ -74,6 +76,8 @@
           href: storage-properties-metadata.md
         - name: Använda lagringsemulatorn
           href: ../common/storage-use-emulator.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+        - name: Dirigera händelser till en anpassad slutpunkt
+          href: storage-blob-event-quickstart.md
         - name: Anpassade domäner
           href: storage-custom-domain-name.md
         - name: Söka i Blob Storage med Azure Search
