--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -43,11 +43,7 @@
       href: sql-database-migrate-your-sql-server-database.md
     - name: 3 – Skydda din SQL-databas
       href: sql-database-security-tutorial.md
-    - name: 4 – Förbättra prestanda för SQL-databas
-      href: sql-database-performance-tutorial.md
-    - name: 5 – Implementera app för flera klientorganisationer
-      href: sql-database-multi-tenant-application.md
-    - name: 6 – Implementera en geodistribuerad databas
+    - name: 4 – Implementera en geo-distribuerad databas
       href: sql-database-implement-geo-distributed-database.md
 - name: Exempel
   items:
