--- a/articles/app-service-web/toc.yml
+++ b/articles/app-service-web/toc.yml
@@ -129,6 +129,8 @@
               href: app-service-linux-ssh-support.md
             - name: Kontinuerlig distribution
               href: app-service-linux-ci-cd.md
+            - name: Distributionstyp – anpassad eller inbyggd avbildning?
+              href: app-service-linux-choose-deployment-type.md
             - name: Vanliga frågor och svar om Webbapp i Linux
               href: app-service-linux-faq.md
     - name: Distribuera till Azure
@@ -172,6 +174,8 @@
           href: app-service-web-deploy-containerized-spring-boot-app-with-maven-plugin.md
         - name: Distribuera en Spring Boot-app i Azure Container Registry till Azure App Service
           href: app-service-web-deploy-spring-boot-app-from-container-registry-using-maven-plugin.md
+        - name: Köra en Hello World-webbapp i en Linux-behållare med hjälp av Azure-verktygen för IntelliJ
+          href: ../azure-toolkit-for-intellij-hello-world-web-app-linux.md
     - name: Ansluta till DB/resurser
       items:
         - name: Ansluta till lokala data
